--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,28 @@
 <html>
 
-<head>
-<meta content="text/html; charset=UTF-8">
-<title>NASA AGU Demo</title>
+  <head>
+    <meta content="text/html; charset=UTF-8">
+    <title>NASA AGU Demo</title>
 
-<link rel=stylesheet href="css/jquery-ui-1.9.2.custom.min.css" type="text/css">
-<link rel=stylesheet href="css/index.css" type="text/css">
+    <link rel=stylesheet href="http://code.jquery.com/ui/1.9.2/themes/pepper-grinder/jquery-ui.css" type="text/css">
+    <link rel=stylesheet href="css/index.css" type="text/css">
 
-<script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
-<script type="text/javascript" src="js/jquery-ui-1.9.2.custom.min.js"></script>
-<script type="text/javascript" src="js/index.js"></script>
-</head>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
+	<script src="js/detectmobilebrowser.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
+  </head>
 
-<body>
-	<div id="left"></div>
-	<div id="right"></div>
-</body>
+  <body>
+    <div id="left">
+      <div id="topics"></div>
+    </div>
+    <div id="middle">
+      <div id="variables"></div>
+    </div>
+    <div id="right">
+      <div class="detail" id="facts"></div>
+    </div>
+  </body>
 
 </html>
