laptop dying, time to commit

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
   <body>
     <div id="left">
-      <div id="topics"></div>
+      <div id="parameters"></div>
     </div>
     <div id="middle">
       <div id="variables"></div>
