updated test file, unit tests

--- a/public/index.html
+++ b/public/index.html
@@ -16,15 +16,9 @@
   </head>
 
   <body>
-    <div id="left">
-      <div id="parameters"></div>
-    </div>
-    <div id="middle">
-      <div id="variables"></div>
-    </div>
-    <div id="right">
-      <div class="detail" id="facts"></div>
-    </div>
+    <div id="parameters"></div>
+    <div id="variables"></div>
+    <div id="comparison"></div>
   </body>
 
 </html>
