initial ui functionality up, except for pop-ups

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -17,8 +17,11 @@
 
   <body>
     <div id="parameters"></div>
-    <div id="variables"></div>
-    <div id="comparison"></div>
+    <div id="content"></div>
+      <div id="variables"></div>
+      <button id="compare">Compare</button>
+      <div id="comparison" class="CSSTableGenerator"></div>
+    </div>
   </body>
 
 </html>
