--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -5,6 +5,7 @@
     <title>NASA AGU Demo</title>
 
     <link rel=stylesheet href="http://code.jquery.com/ui/1.9.2/themes/pepper-grinder/jquery-ui.css" type="text/css">
+    <link rel=stylesheet href="css/tables.css" type="text/css">
     <link rel=stylesheet href="css/index.css" type="text/css">
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
@@ -18,7 +19,7 @@
   <body>
     <div id="parameters"></div>
     <div id="content"></div>
-      <div id="variables"></div>
+      <div id="variables" class="CSSTableGenerator"></div>
       <button id="compare">Compare</button>
       <div id="comparison" class="CSSTableGenerator"></div>
     </div>
