added logo and title

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -17,8 +17,12 @@
   </head>
 
   <body>
-    <div id="parameters"></div>
-    <div id="content"></div>
+      <div id="#nasalogo"><img src="images/nasa_logo.gif" alt="nasa logo"/></div>
+      <div id="#nasatitle"><h1>ASDC ODISEES Data Portal</h1></div>
+    
+    <div id="content">
+      <div id="parameters"></div>
+      <div id="content"></div>
       <div id="variables" class="CSSTableGenerator"></div>
       <button id="compare">Compare</button>
       <div id="comparison" class="CSSTableGenerator"></div>
