--- a/war-resources/index.html
+++ b/war-resources/index.html
@@ -4,27 +4,31 @@
     <meta content="text/html; charset=UTF-8">
     <title>NASA AGU Demo</title>
 
-    <link rel=stylesheet href="http://code.jquery.com/ui/1.9.2/themes/pepper-grinder/jquery-ui.css" type="text/css">
-    <link rel=stylesheet href="css/tables.css" type="text/css">
-    <link rel=stylesheet href="css/index.css" type="text/css">
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.2/themes/pepper-grinder/jquery-ui.css" type="text/css">
+
+    <link rel="stylesheet" href="css/tables.css" type="text/css">
+    <link rel="stylesheet" href="css/index.css" type="text/css">
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
-	<script src="js/detectmobilebrowser.js"></script>
+
+    <script src="js/detectmobilebrowser.js"></script>
     <script type="text/javascript" src="js/handlebars.js"></script>
     <script type="text/javascript" src="js/utils.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
   </head>
 
   <body>
-      <div id="#nasalogo"><img src="images/nasa_logo.gif" alt="nasa logo"/></div>
-      <div id="#nasatitle"><h1>ASDC ODISEES Data Portal</h1></div>
-    
+    <div id="top">
+      <div id="nasalogo"><img src="images/nasa_logo.gif" alt="nasa logo"/></div>
+      <div id="nasatitle"><h1>ASDC ODISEES Data Portal</h1></div>
+    </div>
+    <div id="bottom">
       <div id="parameters"></div>
       <div id="content"></div>
       <div id="variables" class="CSSTableGenerator"></div>
       <button id="compare">Compare</button>
-      <div id="comparison" class="CSSTableGenerator"></div>
+    </div>
   </body>
 
 </html>
