--- a/war-resources/index.html
+++ b/war-resources/index.html
@@ -26,7 +26,7 @@
     <div id="bottom">
       <div id="parameters"></div>
       <div id="content"></div>
-      <div id="variables" class="CSSTableGenerator"></div>
+      <div id="vars" class="CSSTableGenerator"></div>
       <button id="compare">Compare</button>
     </div>
   </body>
