search bar and variable ordering

--- a/war-resources/index.html
+++ b/war-resources/index.html
@@ -22,6 +22,11 @@
     <div id="top">
       <div id="nasalogo"><img src="images/nasa_logo.gif" alt="nasa logo"/></div>
       <div id="nasatitle"><h1>ASDC ODISEES Data Portal</h1></div>
+      <form id="search-form">
+	<input id="search-box" type="text" maxlength="120"/>
+	<input id="search-btn" type="button" value="search"/>
+	<input id="clear-btn" type="button" value="clear"/>
+      </form>
     </div>
     <div id="bottom">
       <div id="parameters"></div>
