--- a/war-resources/index.html
+++ b/war-resources/index.html
@@ -32,6 +32,99 @@
       <div id="vars" class="CSSTableGenerator"></div>
       <button id="compare">Compare</button>
     </div>
+
+
+    <script id="params-template" type="text/x-handlebars-template">
+      {{#each parameters}} 
+      <h3>{{parameter}}</h3> 
+      <div> 
+	{{#each filters}} 
+	<div class='filterValues'> 
+	  <strong id='{{filter}}'>{{name}}</strong> 
+	  <br> 
+	  {{#each values}} 
+	  <div>
+	    <input type='checkbox' value='{{../filter}},{{value}}'/> 
+	    <label filt='{{../filter}},{{value}}' for='{{valueName}}'>{{valueName}}</label> 
+	    <br>
+	  </div> 
+	  {{/each}} 
+	</div> 
+	{{/each}} 
+      </div> 
+      {{/each}} 
+    </script>
+
+
+    <script id="vars-template" type="text/x-handlebars-template">
+      <table id='variables'>
+	<thead>
+	  <tr>
+	    <td>Variable/Parameter</td>
+	    <td>Description</td>
+	    <td>Project</td>
+	  </tr>
+	</thead>
+	<tbody>
+	  {{#each variables}} 
+	  <tr class='variable' id='varpicker-{{variable}}' var='{{variable}}'>
+	    <td> 
+	      <input type='checkbox' value='{{variable}}'/> 
+	      <a uuid='{{variable}}' class='infolink' href='#'>{{variableName}}</a> 
+	    </td>
+	    <td>{{description}}</td>
+	    <td>{{project}}</td>
+	  </tr>
+	  {{/each}} 
+	</tbody>
+      </table>
+    </script>
+
+
+    <script id="compare-template" type="text/x-handlebars-template">
+      <div>
+	<table id='compTable'>
+	  <thead>
+	    <tr>
+	      {{#each relations}}
+	      <th>{{this}}</th>
+	      {{/each}}
+	    </tr>
+	  </thead>
+	  <tbody>
+	    {{#each variables}}
+	    <tr>
+	      {{#each quickFacts}}
+	      <td>{{value}}</td>
+	      {{/each}}
+	    </tr>
+	    {{/each}}
+	  </tbody>
+	</table>
+      </div>
+    </script>
+
+
+    <script id="info-template" type="text/x-handlebars-template">
+      <html>
+	<head><title>{{name}} Info</title></head>
+	<body>
+	  <h2 id='name'>{{name}}</h2>
+	  <br>
+	  <h2 id='facts'>Quick Facts:</h2>
+	  {{#each facts}}
+	  <p style='padding-left: 2em'><b>{{relation}}</b>: {{value}}</p>
+	  {{/each}}
+	  {{#if products}}
+	  <h2 id='facts'>Products:</h2>
+	  {{/if}}
+	  {{#each products}}
+	  <p style='padding-left: 2em'>{{name}}</p>
+	  {{/each}}
+	</body>
+      </html>
+    </script>
+
   </body>
 
 </html>
