--- a/war-resources/index.html
+++ b/war-resources/index.html
@@ -66,7 +66,7 @@
 	<tbody>
 	  {{#each variableNames}}
 	  <tr class='variableName'>
-	    <td>{{variableName}}</td>
+	    <td>{{name}}</td>
 	    <td>{{description}}</td>
 	    <td>{{project}}</td>
 	  </tr>
@@ -75,7 +75,7 @@
 		  <tr class='variable' id='varpicker-{{variable}}' var='{{variable}}'>
 		    <td> 
 		      <input type='checkbox' value='{{variable}}'/>
-		      <a uuid='{{variable}}' class='infolink' href='#'>{{datasetName}}</a> 
+		      <a uuid='{{variable}}' class='infolink' href='#'>{{dataset}}</a> 
 		    </td>
 		  </tr>
 		  {{/each}}
